1.4
Added Mac compatability
Added JRE downloading
Fixed bug with losing network.
Deleted music
Added threads option for multi-core pc
Maybe fixed skins
Added safe startup
Fixed token problems (maybe)